fix(card): don't use highlight on mobile

--- a/pages/HeroesList/HeroesList.module.css
+++ b/pages/HeroesList/HeroesList.module.css
@@ -7,16 +7,17 @@
     gap: 16px;
 }
 
-@media screen and (max-width: 959px) {
-    .card {
-        width: 100%;
-     }
-}
-
 .card {
     filter: opacity(0.9);
 }
 
 .card:hover, .card:focus, .card:active {
     filter: opacity(1);
+}
+
+@media screen and (max-width: 959px) {
+    .card {
+        width: 100%;
+        filter: opacity(1);
+     }
 }
